--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
           <li><a href="#faq">Faq</a></li>
           <li><a href="#contato">Contato</a></li>
           <li>
-            <a data-modal="abrir" href="login.html">Login →</a>
+            <a data-modal="abrir" href="login.html">Login <span 
+              class="arrow-black"></span></a>
           </li>
         </ul>
       </nav>
@@ -289,7 +290,7 @@
 
     <section class="modal-container" data-modal="container">
       <div class="modal">
-        <button data-modal="fechar" class="fechar">X</button>
+        <button data-modal="fechar" class="fechar"></button>
         <form action="">
           <label for="email">Email</label>
           <input type="text" for="email" id="email" />
